--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "team",
   "version": "0.0.0",
+  "description": "fetching blog data from api and displaying them in clickable cards",
+  "engines": {
+    "node": "6.11.1"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
