--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               "src/assets",
               "src/manifest.webmanifest",
               "src/manifest.webmanifest",
+              "src/manifest.webmanifest",
               "src/manifest.webmanifest"
             ],
             "styles": [
@@ -108,6 +109,7 @@
             "assets": [
               "src/favicon.png",
               "src/assets",
+              "src/manifest.webmanifest",
               "src/manifest.webmanifest",
               "src/manifest.webmanifest",
               "src/manifest.webmanifest"
