--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/platform-browser": "^14.0.5",
     "@angular/platform-browser-dynamic": "^14.0.5",
     "@angular/router": "^14.0.5",
+    "@angular/service-worker": "^14.0.5",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
+    "http-server": "^14.1.1",
     "ngx-owl-carousel-o": "^14.0.0",
     "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.6",
